<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/ash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signin.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/signupshape"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/red">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:text="@string/social"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/x"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="55sp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shapes"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:text="@string/signup"
                />
        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="35dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="35sp"
                android:text="@string/signintoyour"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="35sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


           <FrameLayout
               android:layout_width="match_parent"
               android:layout_marginTop="10dp"
               android:layout_height="wrap_content">

               <EditText
                   android:autofillHints="emailAddress"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/emailhint"
                   android:id="@+id/email_edittext"
                   android:inputType="textEmailAddress" />

               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_gravity="end"
                   android:layout_marginEnd="20dp"
                   android:padding="7dp"
                   android:src="@drawable/message"/>
           </FrameLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:autofillHints="password"
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:paddingBottom="4dp"
                    android:src="@drawable/lock_foreground"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotpassword"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_gravity="end"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loginwith"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/white"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_marginEnd="15dp"
                    android:layout_margin="20dp"
                    android:layout_height="50dp"
                    android:id="@+id/google_image"
                    android:src="@mipmap/google"/>
                
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/lock_round"/>



            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="80dp"
            android:background="@color/white"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/donthaveanaccount"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:id="@+id/register_now"
                android:text="@string/registernow"/>
        </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/login_shapes">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textSize="24sp"
            android:id="@+id/login_textview"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>