<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/ash"
    android:layout_height="match_parent"
    tools:context=".signin.SignupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/red">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:text="@string/social"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/x"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="55sp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/signupshape"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:text="@string/login" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@drawable/registershape"
                android:gravity="center_horizontal"
                android:text="@string/signup" />
        </LinearLayout>
    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="35dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@string/createan"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="26sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/namehint"
                        android:inputType="text"
                        android:id="@+id/register_name_edittext" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="20dp"
                        android:paddingBottom="7dp"
                        android:src="@mipmap/person_img"/>
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emailhint"
                        android:id="@+id/register_email_edittext"
                        android:inputType="textEmailAddress" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:layout_marginRight="20dp"
                        android:padding="7dp"
                        android:src="@drawable/message"/>
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactingo"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/india_flag"
                        android:layout_marginTop="10dp"
                        android:id="@+id/flag_imageview"
                        android:layout_gravity="center_vertical"
                        android:layout_height="40dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="IND"
                        android:id="@+id/country_name_textview"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_vertical"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>

                        <Spinner
                            android:layout_marginTop="10dp"
                            android:id="@+id/spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/courntry_code"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:id="@+id/register_phone_edittext"
                            android:inputType="phone" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="end"
                            android:layout_marginRight="20dp"
                            android:padding="7dp"
                            android:src="@mipmap/call_round"/>
                    </FrameLayout>

                </LinearLayout>



                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="*******"
                        android:id="@+id/password_edittext"
                        android:inputType="textPassword" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:layout_marginRight="20dp"
                        android:paddingBottom="4dp"
                        android:src="@drawable/lock_foreground"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_marginRight="20dp"
                        android:id="@+id/checkbox"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:text="@string/iagreewith"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/termsandcondition"
                        android:textColor="@color/red"
                        android:textSize="20dp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:text="@string/alreadyhaveanaccount"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:id="@+id/sign_in_textview"
                        android:text="@string/signin" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/login_shapes">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:textSize="24sp"
                android:id="@+id/register_textview"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>
        </LinearLayout>

</LinearLayout>